Added a style thing.

--- a/captcha-accessible-en.html
+++ b/captcha-accessible-en.html
@@ -158,6 +158,18 @@
 	overflow: hidden;
 	margin: 0;
 }
+.hpclass {
+	z-index: -5;
+	font-size: 0pt;
+	position: relative;
+	top: -5em;
+	height: 0px;
+	overflow: hidden;
+	width: 0;
+	line-height: 0px;
+	margin: 0;
+	padding: 0;			 
+}
 					</pre></code>
 				<h4>Javascript</h4>
 				<code><pre>
