add directory for priorities project

--- a/priorities/a11y-rules-en.html
+++ b/priorities/a11y-rules-en.html
@@ -16,7 +16,7 @@
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/wet-en.js"></script>
     <!-- Write closure template -->
-    <script src="./scripts/refTop.min.js"></script>
+    <script src="../scripts/refTop.min.js"></script>
 </head>
 
 <body vocab="https://schema.org/" typeof="WebPage">
@@ -33,11 +33,11 @@
                 "title": "Home",
                 "href": "https://bati-itao.github.io/"
             }],
-            "lngLinks": [{
-                "lang": "fr",
-                "href": "./axe-rules-fr.html",
-                "text": "Français"
-            }],
+            // "lngLinks": [{
+            //     "lang": "fr",
+            //     "href": "./axe-rules-fr.html",
+            //     "text": "Français"
+            // }],
             "menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
         });
     </script>
@@ -551,12 +551,12 @@
             </tbody>
         </table>
         <div id="def-preFooter"></div>
-        <script src="./scripts/preFooter.min.js"></script>
+        <script src="../scripts/preFooter.min.js"></script>
     </main>
     <div id="def-footer"></div>
-    <script src="./scripts/appFooter.min.js"></script>
-    <script src="./scripts/refFooter.min.js"></script>
-    <script src="./scripts/bati-itao.min.js"></script>
+    <script src="../scripts/appFooter.min.js"></script>
+    <script src="../scripts/refFooter.min.js"></script>
+    <script src="../scripts/bati-itao.min.js"></script>
 </body>
 
 </html>
