--- a/index-fr.html
+++ b/index-fr.html
@@ -16,7 +16,7 @@
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/wet-fr.js"></script>
     <!-- Write closure template -->
-    <script src="./scripts/refTop.min.js"></script>
+    <script src="https://bati-itao.github.io/scripts/refTop.min.js"></script>
 </head>
 
 <body vocab="https://schema.org/" typeof="WebPage">
@@ -47,12 +47,12 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nemo adipisci pariatur atque dignissimos sapiente, expedita quis iure quia temporibus unde ducimus nobis est ipsum, similique aspernatur, aut quod odio?</p>
 
         <div id="def-preFooter"></div>
-        <script src="./scripts/preFooter.min.js"></script>
+        <script src="https://bati-itao.github.io/scripts/preFooter.min.js"></script>
     </main>
     <div id="def-footer"></div>
-    <script src="./scripts/appFooter.min.js"></script>
-    <script src="./scripts/refFooter.min.js"></script>
-    <script src="./scripts/bati-itao.min.js"></script>
+    <script src="https://bati-itao.github.io/scripts/appFooter.min.js"></script>
+    <script src="https://bati-itao.github.io/scripts/refFooter.min.js"></script>
+    <script src="https://bati-itao.github.io/scripts/bati-itao.min.js"></script>
 </body>
     
 </html>
