satisfaction thanks: meta update

--- a/satisfaction-thanks-en.html
+++ b/satisfaction-thanks-en.html
@@ -10,7 +10,7 @@
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
-        content="Thank you for submitting the intake form for the IT Accessibility Office at ESDC">
+        content="Thank you for submitting your feedback for the IT Accessibility Office at ESDC">
     <!-- Meta data-->
     <!-- Load closure template scripts -->
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
