--- a/satisfaction-thanks-fr.html
+++ b/satisfaction-thanks-fr.html
@@ -10,7 +10,7 @@
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
-        content="Merci d'avoir soumis le formulaire d'inscription pour le Bureau de l’accessibilité de la TI">
+        content="Merci d'avoir soumis vos commentaires pour le Bureau de l’accessibilité de la TI">
     <!-- Meta data-->
     <!-- Load closure template scripts -->
     <script src="https://ssl-templates.services.gc.ca/rn/cls/wet/gcweb/cdts/compiled/soyutils.js"></script>
