--- a/intake-thanks-fr.html
+++ b/intake-thanks-fr.html
@@ -26,8 +26,8 @@
         var defTop = document.getElementById("def-top");
         defTop.outerHTML = wet.builder.appTop({
             "appName": [{
-                "text": "ESDC / IT Accessibility office",
-                "href": "https://bati-itao.github.io/"
+                "text": "EDSC / Bureau de l’accessibilité de la TI",
+                "href": "https://bati-itao.github.io/index-fr.html"
             }],
            "breadcrumbs" : [{
                 "title": "Home",
