intake: fix to first drop down to add name value

--- a/intake-en.html
+++ b/intake-en.html
@@ -54,15 +54,15 @@
                 <div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true}'>
                     <p>Select a Service Category</p>
                     <ul>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}'>Adaptive Technology Assessment</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle2 , #clientInformation", "live": true}'>IT Accessibility Coaching, Awareness and Curriculum</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle3 , #clientInformation", "live": true}'>Accessibility Compliance Project</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}'>Web Information and communications technology (ICT) Assessment</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}'>COTS Information and communications technology (ICT) Assessment</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle6 , #clientInformation", "live": true}'>Document Accessibility Review</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle7 , #clientInformation", "live": true}'>Procurement and General Advice on Accessible ICT</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#followUp , #generalRequest , #clientInformation", "live": true}'>Follow up on previous request</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#clientInformation , #generalRequest", "live": true}'>Other</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Adaptive Technology Assessment"},{"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}]'>Adaptive Technology Assessment</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "IT Accessibility Coaching, Awareness and Curriculum"},{"action": "toggle", "toggle": "#toggle2 , #clientInformation", "live": true}]'>IT Accessibility Coaching, Awareness and Curriculum</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Accessibility Compliance Project"},{"action": "toggle", "toggle": "#toggle3 , #clientInformation", "live": true}]'>Accessibility Compliance Project</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Web Information and communications technology (ICT) Assessment"},{"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}]'>Web Information and communications technology (ICT) Assessment</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "COTS Information and communications technology (ICT) Assessment"},{"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}]'>COTS Information and communications technology (ICT) Assessment</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Document Accessibility Review"},{"action": "toggle", "toggle": "#toggle6 , #clientInformation", "live": true}]'>Document Accessibility Review</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Procurement and General Advice on Accessible ICT"},{"action": "toggle", "toggle": "#toggle7 , #clientInformation", "live": true}]'>Procurement and General Advice on Accessible ICT</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Follow up on previous request"},{"action": "toggle", "toggle": "#followUp , #generalRequest , #clientInformation", "live": true}]'>Follow up on previous request</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Other"},{"action": "toggle", "toggle": "#clientInformation , #generalRequest", "live": true}]'>Other</li>
                     </ul>
                 </div>
 
