--- a/intake-fr.html
+++ b/intake-fr.html
@@ -53,15 +53,15 @@
                 <div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true}'>
                     <p>Sélectionnez une catégorie de service</p>
                     <ul>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}'>Évaluation d&rsquo;une technologie adapative, soutien et banque de prêt</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle2 , #clientInformation", "live": true}'>Encadrement, sensibilisation et cursus de formation en accessibilité des TI</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle3 , #clientInformation", "live": true}'>Projet de conformité en accessibilité</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}'>Évaluation des technologies de l&rsquo;information et des communications (TIC) sur le web</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}'>Évaluation des technologies de l&rsquo;information et des communications (TIC) de logiciel commercial standard</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle6 , #clientInformation", "live": true}'>Révision de document en accessibilité</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#toggle7 , #clientInformation", "live": true}'>Acquisition et conseils généraux des TIC accessible</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#followUp , #generalRequest , #clientInformation", "live": true}'>Suivi de la demande précédente</li>
-                        <li data-wb-fieldflow='{"action": "toggle", "toggle": "#clientInformation , #generalRequest", "live": true}'>Autres</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Évaluation d&rsquo;une technologie adapative, soutien et banque de prêt"}, {"action": "toggle", "toggle": "#toggle1 , #clientInformation", "live": true}]'>Évaluation d&rsquo;une technologie adapative, soutien et banque de prêt</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Encadrement, sensibilisation et cursus de formation en accessibilité des TI"}, {"action": "toggle", "toggle": "#toggle2 , #clientInformation", "live": true}]'>Encadrement, sensibilisation et cursus de formation en accessibilité des TI</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Projet de conformité en accessibilité"}, {"action": "toggle", "toggle": "#toggle3 , #clientInformation", "live": true}]'>Projet de conformité en accessibilité</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Évaluation des technologies de l&rsquo;information et des communications (TIC) sur le web"}, {"action": "toggle", "toggle": "#toggle4 , #clientInformation", "live": true}]'>Évaluation des technologies de l&rsquo;information et des communications (TIC) sur le web</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Évaluation des technologies de l&rsquo;information et des communications (TIC) de logiciel commercial standard"}, {"action": "toggle", "toggle": "#toggle5 , #clientInformation", "live": true}]'>Évaluation des technologies de l&rsquo;information et des communications (TIC) de logiciel commercial standard</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Révision de document en accessibilité"}, {"action": "toggle", "toggle": "#toggle6 , #clientInformation", "live": true}]'>Révision de document en accessibilité</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Acquisition et conseils généraux des TIC accessible"}, {"action": "toggle", "toggle": "#toggle7 , #clientInformation", "live": true}]'>Acquisition et conseils généraux des TIC accessible</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Suivi de la demande précédente"}, {"action": "toggle", "toggle": "#followUp , #generalRequest , #clientInformation", "live": true}]'>Suivi de la demande précédente</li>
+                        <li data-wb-fieldflow='[{"action": "query", "name": "selectService", "value": "Autres"}, {"action": "toggle", "toggle": "#clientInformation , #generalRequest", "live": true}]'>Autres</li>
                     </ul>
                 </div>
 
