fix typo in English captcha

--- a/captcha-accessible-en.html
+++ b/captcha-accessible-en.html
@@ -37,7 +37,7 @@
 			}],
 			"lngLinks": [{
 				"lang": "fr",
-				"href": "./index-fr.html",
+				"href": "./captcha-accessible-fr.html",
 				"text": "Français"
 			}],
 			"menuPath": "https://bati-itao.github.io/ajax/menu-en.html"
@@ -53,7 +53,7 @@
 		<h3>Image based CAPTCHA’s</h3>
 		<p>Not accessible as visually impaired people cannot see the images and input the requested information.</p>
 		<h3>Audio CAPTCHA</h3>
-		<p>This will work with the screen readers, as the user can “hear” the word(s), but it can be exploited by smart
+		<p>This will work with the screen readers, as the user can “hear” the word(s), but it can be exploited by smart BOTS
 			and presents the same problem as Image Based CAPTCHA’s for the visually impaired. Here is an <a href="https://gbhackers.com/security-researcher-breaks-googles-recaptcha-v2-using-googles-tool/">audio CAPTCHA</a> that covers it in details.</p>
 		<h3>reCAPTCHA</h3>
 		<p>Uses digitized words but presents the same problem as Image Based CAPTCHA’s for the visually impaired.</p>
